tests/expectations/compiler/tuple/tuple_in_struct_fail.out
DCE_ENABLED:
Error [ETYC0372050]: A struct cannot contain a tuple.
    --> compiler-test:4:9
     |
   4 |         mem: (u8, u16)
     |         ^^^
Error [ETYC0372050]: A struct cannot contain a tuple.
    --> compiler-test:8:9
     |
   8 |         mems: (A, A)
     |         ^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | program test.aleo {
     | ^^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372050]: A struct cannot contain a tuple.
    --> compiler-test:4:9
     |
   4 |         mem: (u8, u16)
     |         ^^^
Error [ETYC0372050]: A struct cannot contain a tuple.
    --> compiler-test:8:9
     |
   8 |         mems: (A, A)
     |         ^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | program test.aleo {
     | ^^^^^^^^^^^^
